--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,8 +15,8 @@ body
 
 .btn-primary:hover
     color: #fff
-    background-color:#6c757d
-    border-color: #6c757d
+    background-color:#b52249
+    border-color: #b52249
 
 .btn-secondary
     color: black
@@ -25,8 +25,8 @@ body
 
 .btn-secondary:hover
     color: #fff
-    background-color: #6c757d
-    border-color: #6c757d
+    background-color: #b52249
+    border-color: #b52249
 /*===== CAROUSEL =====*/
 .carousel
     margin-bottom: 4rem
@@ -111,11 +111,11 @@ body
     border-radius: .5rem
 
 ::-webkit-scrollbar-thumb
-    background-color: #6c757d
+    background-color: #d52856
     border-radius: .5rem
 
 ::-webkit-scrollbar-thumb:hover
-    background-color: #d52856
+    background-color: #b52249
     border-radius: .5rem
 
 
